= 1.6.0

* First official release since 1.5.0.  Thanks to Eric Hodel for turning over the project to me!

* Implement socket timeouts, should fix rare cases of very bad things happening
  in production at 37signals and FiveRuns. (jseirles)

* New project home page: http://github.com/mperham/memcache-client

* Implement a consistent hashing algorithm, as described in libketama.
  This dramatically reduces the cost of adding or removing servers dynamically
  as keys are much more likely to map to the same server.

  Take a scenario where we add a fourth server.  With a dumb modulo algorithm, about
  25% of the keys will map to the same server.  In other words, 75% of your memcached
  content suddenly becomes invalid.  With a consistent algorithm, 75% of the keys
  will map to the same server as before - only 25% will be invalidated. (mperham)

= 1.5.0.5

* Remove native C CRC32_ITU_T extension in favor of Zlib's crc32 method.
  memcache-client is now pure Ruby again and will work with JRuby and Rubinius.

= 1.5.0.4

* Get test suite working again (packagethief)
* Ruby 1.9 compatiblity fixes (packagethief, mperham)
* Consistently return server responses and check for errors (packagethief)
* Properly calculate CRC in Ruby 1.9 strings (mperham)
* Drop rspec in favor of test/unit, for 1.9 compat (mperham)

= 1.5.0.3 (FiveRuns fork)

* Integrated ITU-T CRC32 operation in native C extension for speed.  Thanks to Justin Balthrop!

= 1.5.0.2 (FiveRuns fork)

* Add support for seamless failover between servers.  If one server connection dies,
the client will retry the operation on another server before giving up.

* Merge Will Bryant's socket retry patch.
http://willbryant.net/software/2007/12/21/ruby-memcache-client-reconnect-and-retry

= 1.5.0.1 (FiveRuns fork)

* Fix set not handling client disconnects.
http://dev.twitter.com/2008/02/solving-case-of-missing-updates.html

= 1.5.0

* Add MemCache#flush_all command.  Patch #13019 and bug #10503.  Patches