@@ -1,0 +1,5 @@
+require 'mkmf'
+ 
+dir_config("binary_search")
+ 
+create_makefile("binary_search")
