@@ -9,6 +9,7 @@ Gem::Specification.new do |s|
 
 	s.require_path = 'lib'
 
-	s.files = ["README.rdoc", "LICENSE.txt", "History.txt", "Rakefile", "lib/memcache.rb", "lib/memcache_util.rb"]
+	s.files = ["README.rdoc", "LICENSE.txt", "History.txt", "Rakefile", "lib/memcache.rb", "lib/memcache_util.rb", 'ext/memcache/binary_search.c']
 	s.test_files = ["test/test_mem_cache.rb"]
+	s.extensions = ['ext/memcache/extconf.rb']
 end
